# smol_rust_projects

./: .gitignore  Cargo.toml  README.md  notes.json
documents_to_test/: intro.md
src/: main.rs
src/file_handling/: file_handling.rs
src/load_vault/: load_vault.rs  mod.rs
src/neural_network/: neural_network.rs
src/nlp_search/: mod.rs  nlp_search.rs
src/note_structure/: mod.rs  note_structure.rs
src/parts_of_speech_mod/: mod.rs  parts_of_speech.rs
src/stt/: mod.rs  py_stt.py  stt.rs
src/translator/: translator.rs
