[package]
name = "nlp_search"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-bert = "0.23.0"
console = { version = "0.16", features = ["std"] }
tch = "0.17.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.10.0"
rayon = "1.8"
walkdir = "2.5.0"

uuid = { version = "1.22", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }